--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+.colorFeed
+{
+  margin: 10px;
+}
+.colorFeed  input
+{
+  padding: 10px;
+  margin: 10px;
+  outline: none;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+.colorFeed  input[type="submit"]
+{
+    cursor: pointer;
+    color: white;
+    background-color: #1E2D4C;
+    padding: 10px;
+}
+.box
+{
+  width: 30%;
+  margin: 10px;
+  height: 200px;
+  border: 1px solid black ;
+  border-radius: 5px;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.8);
+  position: relative;
+}
+.dlt
+{
+  position: absolute;
+  background: #fefefe;
+  height: 5px;
+  border-radius: 50%;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+  border: 1px solid #ccc;
+  right: 10px;
+  color: red;
+  font-weight: bolder;
+  cursor: pointer;
+}
+.box p
+{
+  height: 25%;
+  margin: 0px;
+  
+}
+.box p span{
+  display: inline-block;
+  color: rgba(63, 61, 61,0.7);
+  background-color: #eee;
+  margin-left:  10px;
+  margin-top:  10px;
+  padding: 3px;
+  border-radius: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container
+{
+    display: flex;
+    flex-wrap: wrap;
 }
